// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cannot have if without else 1`] = `"Line 2: Missing \\"else\\" in \\"if-else\\" statement"`;

exports[`Cannot have incomplete statements 1`] = `"Line 2: Missing semicolon at the end of statement"`;

exports[`Cannot leave blank expressions in for loops 1`] = `"Line 2: Missing init expression in for statement."`;

exports[`Cannot leave blank expressions in for loops 2`] = `"Line 2: Missing test expression in for statement."`;

exports[`Cannot leave blank expressions in for loops 3`] = `"Line 2: Missing update expression in for statement."`;

exports[`Cannot leave blank expressions in for loops 4`] = `"Line 2: Missing init, test, update expressions in for statement."`;

exports[`Cannot leave while loop predicate blank 1`] = `"Line 2: SyntaxError: Unexpected token (2:8)"`;

exports[`Cannot use assignment expressions 1`] = `"Line 3: Assignment inside an expression is not allowed. Only assignment in a statement is allowed."`;

exports[`Cannot use assignment expressions 2`] = `"Line 4: Assignment inside an expression is not allowed. Only assignment in a statement is allowed."`;

exports[`Cannot use assignment expressions 3`] = `"Line 3: Assignment inside an expression is not allowed. Only assignment in a statement is allowed."`;

exports[`Cannot use destructuring declarations 1`] = `"Line 3: Array patterns are not allowed"`;

exports[`Cannot use function expressions 1`] = `"Line 2: Function expressions are not allowed"`;

exports[`Cannot use function expressions 2`] = `"Line 2: Function expressions are not allowed"`;

exports[`Cannot use multiple declarations 1`] = `"Line 2: Multiple declaration in a single statement"`;

exports[`Cannot use update expressions 1`] = `""`;

exports[`Cannot use update statements 1`] = `"Line 3: The assignment operator += is not allowed. Use = instead"`;

exports[`No array expressions in chapter 2 1`] = `"Line 2: Array expressions are not allowed"`;

exports[`No empty statements 1`] = `"Line 2: Empty statements are not allowed"`;

exports[`No rest pattern 1`] = `"Line 2: Rest elements are not allowed"`;

exports[`No spread operator 1`] = `"Line 5: Spread elements are not allowed"`;

exports[`No trailing commas in arrays 1`] = `
"Line 2: Trailing comma
Line 2: Array expressions are not allowed"
`;

exports[`No trailing commas in objects 1`] = `"Line 4: SyntaxError: Unexpected token (4:7)"`;

exports[`for needs braces 1`] = `
Object {
  "status": "error",
}
`;

exports[`for needs braces 2`] = `"Line 2: Missing curly braces around \\"for\\" block"`;

exports[`if needs braces 1`] = `
Object {
  "status": "error",
}
`;

exports[`if needs braces 2`] = `
"Line 2: Missing curly braces around \\"if\\" block
Line 2: Missing curly braces around \\"else\\" block"
`;

exports[`no assigning to reserved keywords 1`] = `
"Line 2: Reserved word 'yield' is not allowed as a name
Line 3: Reserved word 'package' is not allowed as a name
Line 4: Reserved word 'static' is not allowed as a name"
`;

exports[`no classes 1`] = `
"Line 2: Class bodys are not allowed
Line 2: Class declarations are not allowed"
`;

exports[`no debugger statement 1`] = `"Line 2: Debugger statements are not allowed"`;

exports[`no declaring reserved keywords 1`] = `
"Line 2: Reserved word 'yield' is not allowed as a name
Line 3: Reserved word 'package' is not allowed as a name
Line 4: Reserved word 'static' is not allowed as a name"
`;

exports[`no export constant 1`] = `"Line 2: SyntaxError: 'import' and 'export' may appear only with 'sourceType: module' (2:4)"`;

exports[`no export default 1`] = `"Line 3: SyntaxError: 'import' and 'export' may appear only with 'sourceType: module' (3:4)"`;

exports[`no export function 1`] = `"Line 2: SyntaxError: 'import' and 'export' may appear only with 'sourceType: module' (2:4)"`;

exports[`no for in loops 1`] = `
"Line 2: Missing value in variable declaration
Line 2: For in statements are not allowed"
`;

exports[`no for of loops 1`] = `
"Line 2: Missing value in variable declaration
Line 2: For of statements are not allowed"
`;

exports[`no generator functions 1`] = `"Line 3: Yield expressions are not allowed"`;

exports[`no implicit undefined return 1`] = `"Line 3: Missing value in return statement"`;

exports[`no import 1`] = `"Line 2: SyntaxError: 'import' and 'export' may appear only with 'sourceType: module' (2:4)"`;

exports[`no interface 1`] = `"Line 2: SyntaxError: Unexpected token (2:14)"`;

exports[`no regexp 1`] = `
"Line 1: Missing semicolon at the end of statement
Line 1: 'RegExp' literals are not allowed"
`;

exports[`no sequence expression 1`] = `"Line 2: Sequence expressions are not allowed"`;

exports[`no super 1`] = `
"Line 4: Supers are not allowed
Line 3: Function expressions are not allowed
Line 3: Method definitions are not allowed
Line 2: Class bodys are not allowed
Line 2: Class declarations are not allowed"
`;

exports[`no template literals 1`] = `
"Line 1: Missing semicolon at the end of statement
Line 1: Template elements are not allowed
Line 1: Template literals are not allowed"
`;

exports[`no this, no new 1`] = `"Line 3: 'this' expressions are not allowed"`;

exports[`no try statements 1`] = `
"Line 6: Spread elements are not allowed
Line 7: Catch clauses are not allowed
Line 5: Try statements are not allowed"
`;

exports[`no unspecified operators 1`] = `"Line 2: Operator '<<' is not allowed."`;

exports[`no unspecified unary operators 1`] = `"Line 3: Operator 'typeof' is not allowed."`;

exports[`while needs braces 1`] = `
Object {
  "status": "error",
}
`;

exports[`while needs braces 2`] = `"Line 3: Missing curly braces around \\"while\\" block"`;
